[gd_scene load_steps=3 format=3 uid="uid://jx2jmwsmjn5w"]

[ext_resource type="Script" uid="uid://3fyj8c53vee2" path="res://Scripts/ScoreUI.gd" id="1_slsms"]
[ext_resource type="FontFile" uid="uid://rbq7vln3ekon" path="res://Art/Minecraft_font.ttf" id="2_7kmc4"]

[node name="ScoreUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_slsms")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(800, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="EnemyScore" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("2_7kmc4")
theme_override_font_sizes/font_size = 150
text = "0"

[node name="PlayerScore" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7kmc4")
theme_override_font_sizes/font_size = 150
text = "0"
